Use concurrent mark sweep if on 64-bit architecture